@@ -17,12 +17,12 @@ public final class CustodyAddCommand extends AbstractCommand {
     @Override
     public void validateArgs(List<String> args) {
         ensureArgCount(args, 1);
-        parseId(args.getFirst(), "sample_id");
+        parseId(args.get(0), "sample_id");
     }
 
     @Override
     public CommandExecutionResult execute(CliContext context, List<String> args) {
-        long sampleId = parseId(args.getFirst(), "sample_id");
+        long sampleId = parseId(args.get(0), "sample_id");
         Sample sample = context.getSampleService().getById(sampleId);
         if (sample.getHoldStatus() == SampleHoldStatus.ON_HOLD) {
             throw new ValidationException("Ошибка: sample с id=" + sampleId + " находится ON_HOLD, сначала выполните sample_release");
