@@ -13,12 +13,12 @@ public final class SampleReleaseCommand extends AbstractCommand {
     @Override
     public void validateArgs(List<String> args) {
         ensureArgCount(args, 1);
-        parseId(args.getFirst(), "sample_id");
+        parseId(args.get(0), "sample_id");
     }
 
     @Override
     public CommandExecutionResult execute(CliContext context, List<String> args) {
-        long sampleId = parseId(args.getFirst(), "sample_id");
+        long sampleId = parseId(args.get(0), "sample_id");
         context.getSampleService().release(sampleId);
         System.out.println("OK sample " + sampleId + " is ACTIVE");
         return CommandExecutionResult.CONTINUE;
