@@ -13,12 +13,12 @@ public final class SealBreakCommand extends AbstractCommand {
     @Override
     public void validateArgs(List<String> args) {
         ensureArgCount(args, 1);
-        parseId(args.getFirst(), "seal_id");
+        parseId(args.get(0), "seal_id");
     }
 
     @Override
     public CommandExecutionResult execute(CliContext context, List<String> args) {
-        long sealId = parseId(args.getFirst(), "seal_id");
+        long sealId = parseId(args.get(0), "seal_id");
         context.getSealService().breakSeal(sealId);
         System.out.println("OK seal " + sealId + " is BROKEN");
         return CommandExecutionResult.CONTINUE;
